@@ -1,3 +1,10 @@
+2009-04-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>
+
+        * matchbox/core/mb-wm-root-window.c:
+        new flag to mean that a window should only be closed if
+        it's topmost.
+        Fixes NB#105384.
+
 2009-04-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
 	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
